# ByteC

./: .gitignore  README.md
builder/: CMakeLists.txt
builder/includes/: globals.h  token.h  writer.h
builder/src/: main.cpp  tokenizer.cpp  writer.cpp
examples/: console.c  math.c  memory.c
lib/: Makefile
lib/src/: bytefs.c  byteio.c
rootfs/Users/struct_c/: test.txt
vm/: CMakeLists.txt
vm/includes/: globals.h  jail.h  token.h  vm.h
vm/src/: jail.cpp  main.cpp  parser.cpp  vm.cpp
